[tool.poetry]
name = "sovits-f0-infer-2-0"
version = "0.1.0"
description = ""
authors = ["Dosugamea"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "sovits_f0_infer_2_0"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
Flask-Cors = "^3.0.10"
gradio = "^3.9.1"
numpy = "^1.23.4"
playsound = "1.3.0"
PyAudio = "^0.2.12"
pydub = "^0.25.1"
pyworld = "^0.3.2"
requests = "^2.28.1"
scipy = "^1.9.3"
sounddevice = "^0.4.5"
soundfile = "^0.11.0"
starlette = "^0.21.0"
torch = "1.12.1"
torchaudio = "0.12.1"
tqdm = "^4.64.1"
librosa = "^0.9.2"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
